## Copyright (c) 2013 Comcast. All rights reserved.

SUBDIRS = 
librdkloggers_la_includedir = $(includedir)
librdkloggers_la_include_HEADERS = rdk_debug.h rdk_error.h rdk_logger_types.h rdk_utils.h

if IS_DYNAMIC_ENABLED
libloggerutil_la_includedir = $(includedir)
libloggerutil_la_include_HEADERS = rdk_log_reg.h
endif
